--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "author": "huangtianyu.eddie",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "console-polyfill": "^0.3.0",
+    "es5-shim": "^4.5.10",
+    "es6-promise": "^4.2.4",
+    "eventsource-polyfill": "^0.9.6",
+    "fetch-detector": "^1.0.1",
+    "fetch-ie8": "^1.5.0",
     "history": "^3.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -50,8 +57,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-api-mocker": "^1.5.2",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.5",
+    "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^0.14.1"
   }
 }
