--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "redux-simple-router": "^2.0.4",
     "redux-thunk": "^2.3.0"
   },
