--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
@@ -46,19 +46,21 @@
     "babel-preset-stage-1": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "4.5.2",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^4.3.3",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^3.10.0",
+    "style-loader": "^0.22.1",
+    "url-loader": "^1.1.0",
+    "webpack": "^4.16.5",
     "webpack-api-mocker": "^1.5.2",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^0.14.1"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "3.1.5",
+    "webpack-merge": "^4.1.4"
   }
 }
